objects/INFEnvironmentalData__c.object
<CustomObject>
    <label>Environment</label>
    <nameField>
        <label>Evironment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INF_SDM__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>SDM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_CDAX__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>CDAX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_GSAE__c</fullName>
        <label>GSAE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_GSLE__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>GSLE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_ILab__c</fullName>
        <label>ILab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Other__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Send2__c</fullName>
        <label>Send2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Biosar__c</fullName>
        <description>In Production? Yes/No</description>
        <label>Biosar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_E_Sign__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>E-Sign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_ChemACX__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>ChemACX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_RD_LIMS__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>R&amp;D LIMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_BioAssay__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>BioAssay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Labworks__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>Labworks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_LimsLink__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>LimsLink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_db_Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INF_CombiChem__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>CombiChem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Inventory__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>Inventory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_CSDocStore__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>CSDocStore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_DocManager__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>DocManager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_E_Notebook__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>E-Notebook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_ImageEntry__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>ImageEntry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Production__c</fullName>
        <label>Production</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Dev</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_dbdatabase__c</fullName>
        <label>Database</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MySql</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Postgresql</fullName>
                </value>
                <value>
                    <fullName>SQL Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Formulations__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>Formulations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Registration__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Spotfire_Pro__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>Spotfire Pro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_3rd_part_Apps__c</fullName>
        <label>3rd part Apps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INF_BioAnalytical__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>BioAnalytical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_OS_Middletier__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RedHat/centOS 4.x-32 bit</fullName>
                </value>
                <value>
                    <fullName>RedHat/centOS 5.x-32 bit</fullName>
                </value>
                <value>
                    <fullName>RedHat/centOS 4.x-64 bit</fullName>
                </value>
                <value>
                    <fullName>RedHat/centOS 6.x-32 bit</fullName>
                </value>
                <value>
                    <fullName>RedHat/centOS 6.x-64 bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Server</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Server 32-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Server 64-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server 32-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server 64-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Server</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Lead_Discovery__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>Lead Discovery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Version_Number__c</fullName>
        <label>Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Webserver_Core__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>Webserver Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_ram_middletier__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 GB</fullName>
                </value>
                <value>
                    <fullName>2GB</fullName>
                </value>
                <value>
                    <fullName>4GB</fullName>
                </value>
                <value>
                    <fullName>8GB+</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Oracle_Catridge__c</fullName>
        <label>Oracle Catridge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Spotfire_Server__c</fullName>
        <inlineHelpText>In Production?Yes/No</inlineHelpText>
        <label>Spotfire Server</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_os_databasetier__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>windows 2000 server</fullName>
                </value>
                <value>
                    <fullName>windows 2003 Server 32-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Server 2008 64-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server 32-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server 64-bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Server</fullName>
                </value>
                <value>
                    <fullName>Linux RH(Version?) Intel 32-bit/64-bit</fullName>
                </value>
                <value>
                    <fullName>Linux Suse(Version?) Intel 32-bit/64-bit</fullName>
                </value>
                <value>
                    <fullName>HP/UX PA-RISC(Version?)</fullName>
                </value>
                <value>
                    <fullName>Sun Solaries(Version?) SPARC 32bit/64bit</fullName>
                </value>
                <value>
                    <fullName>IBM AIX p/z-series (Version?)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Database_Version__c</fullName>
        <label>Database Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Other_Middletier__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INF_ram_databasetier__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 GB</fullName>
                </value>
                <value>
                    <fullName>2GB</fullName>
                </value>
                <value>
                    <fullName>4GB</fullName>
                </value>
                <value>
                    <fullName>8GB+</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_EN_Version_Number__c</fullName>
        <label>E-Notebook Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Sample_Management__c</fullName>
        <inlineHelpText>In Production? Yes/No</inlineHelpText>
        <label>Sample Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Inv_Version_Number__c</fullName>
        <label>Inventory Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Reg_Version_Number__c</fullName>
        <label>Registration Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_SDM_Version_Number__c</fullName>
        <label>SDM Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_CDAX_Version_Number__c</fullName>
        <label>CDAX Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_GSAE_Version_Number__c</fullName>
        <label>GSAE Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_GSLE_Version_Number__c</fullName>
        <label>GSLE Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_iLab_Version_Number__c</fullName>
        <label>iLab Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_ESign_Version_Number__c</fullName>
        <label>E-Sign Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Other_Version_Number__c</fullName>
        <label>Other Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Send2_Version_Number__c</fullName>
        <label>Send2 Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Biosar_Version_Number__c</fullName>
        <label>Biosar Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Docmgr_Version_Number__c</fullName>
        <label>DocManager Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Hosted_URL_middletier__c</fullName>
        <label>Hosted URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>INF_If_your_Using_ACxChem__c</fullName>
        <label>If your Using ChemACX you access it from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The Oracle database Tier</fullName>
                </value>
                <value>
                    <fullName>The Application mIddle Tier as .mdb Database</fullName>
                </value>
                <value>
                    <fullName>Online via CambridgeSoft&apos;s hosted site</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_RD_LIM_Version_Number__c</fullName>
        <label>RD LIMS Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_ChemACX_Version_Number__c</fullName>
        <label>ChemACX Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Formltn_Version_Number__c</fullName>
        <label>Formulations Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Webcore_Version_Number__c</fullName>
        <label>Web Core Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_BioAssay_Version_Number__c</fullName>
        <label>BioAssay Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Labworks_Version_Number__c</fullName>
        <label>Labworks Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_LdDscvry_Version_Number__c</fullName>
        <label>Lead Discovery Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_LimsLink_Version_Number__c</fullName>
        <label>Lims Link Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_CombiChem_Version_Number__c</fullName>
        <label>CombiChem Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_CSDocStore_Version_Number__c</fullName>
        <label>CSDocStore Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_ImageEntry_Version_Number__c</fullName>
        <label>ImageEntry Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Sample_mng_Version_Number__c</fullName>
        <label>Sample Management Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_BioAnalytic_Version_Number__c</fullName>
        <label>BioAnalytic Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Sptfire_Pro_Version_Number__c</fullName>
        <label>Sptfire Pro Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Sptfr_Server_Version_Number__c</fullName>
        <label>Spotfire Server Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_OracleCatrdige_Version_Number__c</fullName>
        <label>Oracle CatrdigeVersion Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Row_Level_Security_middletier__c</fullName>
        <label>Row Level Security In Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Client_Deployment_Method_Middletier__c</fullName>
        <label>Client Deployment Method</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>